# fasttext.rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  test_uv_script_fasttext_rs.py
.github/workflows/: ci.yml  publish.yml
python/fasttext_rs/: __init__.py
src/: args.rs  dictionary.rs  fasttext.rs  lib.rs  matrix.rs  model.rs  utils.rs
tests/: bench.py  test_api.py  test_integration.py
