[package]
name = "fasttext_rs"
version = "0.2.1"
edition = "2021"
description = "A Rust-backed Python implementation of Facebook's fastText"

[lib]
name = "fasttext_rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
byteorder = "1.5"
unicode-normalization = "0.1"
