[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fasttext-rs"
version = "0.2.0"
description = "A Rust-backed Python implementation of Facebook's fastText"
requires-python = ">=3.9"
readme = "README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "fasttext_rs"

[dependency-groups]
dev = [
    "fasttext",
    "pytest",
    "numpy",
    "maturin",
    "ruff>=0.15.4",
]
